--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     },
     "require": {
         "php": ">=7.0",
+        "jeremeamia/superclosure": "^2.3",
         "laravel/dusk": "~2.0",
         "orchestra/testbench": "~3.5.0"
     },
