Move all code to Orchestra\Testbench\Dusk namespace.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "Orchestra\\Testbench\\": "src/"
+            "Orchestra\\Testbench\\Dusk\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Orchestra\\Testbench\\Tests\\": "tests/"
+            "Orchestra\\Testbench\\Dusk\\Tests\\": "tests/"
         }
     },
     "require": {
