--- a/composer.json
+++ b/composer.json
@@ -31,21 +31,22 @@
         "php": ">=7.0",
         "jeremeamia/superclosure": "^2.3",
         "laravel/dusk": "~2.0.1",
-        "orchestra/testbench": "~3.5.2"
+        "orchestra/testbench": "~3.6.0"
     },
     "require-dev": {
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0"
     },
     "suggest": {
-        "orchestra/database": "Allow to use --realpath migration for testing (~3.5)."
+        "orchestra/database": "Allow to use --realpath migration for testing (~3.6)."
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.5-dev"
+            "dev-master": "3.6-dev"
         }
     },
     "config": {
         "sort-packages": true
-    }
+    },
+    "minimum-stability": "dev"
 }
