--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,7 @@
         "php": ">=7.1",
         "jeremeamia/superclosure": "^2.3",
         "laravel/dusk": "~3.0",
+        "facebook/webdriver": "~1.3",
         "orchestra/testbench": "~3.6.0"
     },
     "require-dev": {
