--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
         "php": ">=7.0",
         "facebook/webdriver": "~1.3",
         "jeremeamia/superclosure": "^2.3",
-        "konsulting/project-root": "dev-master",
+        "konsulting/project-root": "~1.0",
         "laravel/dusk": "~2.0.11",
         "orchestra/testbench": "~3.5.2"
     },
