--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,8 @@ before_script:
   - ./vendor/laravel/dusk/bin/chromedriver-linux &
 
 script:
-  - if [[ $coverage = 'yes' ]]; then ./vendor/bin/phpunit -c phpunit.xml --coverage-clover build/logs/clover.xml; fi
-  - if [[ $coverage = 'no' ]]; then ./vendor/bin/phpunit -c phpunit.xml; fi
+  - if [[ $coverage = 'yes' ]]; then ./vendor/bin/phpunit -c ./ --coverage-clover build/logs/clover.xml; fi
+  - if [[ $coverage = 'no' ]]; then ./vendor/bin/phpunit -c ./; fi
 
 after_script:
   - if [[ $setup = 'coveralls' ]]; then php vendor/bin/coveralls -v; fi
