--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
     },
     "require": {
         "php": ">=7.0",
+        "facebook/webdriver": "~1.3",
         "jeremeamia/superclosure": "^2.3",
         "konsulting/project-root": "~1.0",
         "laravel/dusk": "~2.0.11",
