--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     },
     "scripts": {
         "test": [
+            "@php create-sqlite-db",
             "@php vendor/bin/phpunit -c ./ --color"
         ]
     },
