--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -28,5 +28,6 @@
         <env name="APP_ENV" value="testing"/>
         <env name="APP_KEY" value="AckfSECXIvnK5r28GVIWUAxmbBSjTsmF"/>
         <env name="DB_CONNECTION" value="sqlite"/>
+        <env name="SESSION_DRIVER" value="file" />
     </php>
 </phpunit>
