--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "orchestra/testbench": "~3.6.0"
     },
     "require-dev": {
+        "laravel/laravel": "5.6.x-dev",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~7.0"
     },
