--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
     },
     "require-dev": {
         "laravel/laravel": "5.6.x-dev",
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~7.0"
+        "mockery/mockery": "~1.0"
     },
     "extra": {
         "branch-alias": {
