--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ env:
     - setup=lowest
     - setup=stable
 
+addons:
+   chrome: stable
+
 before_install:
   - travis_retry composer self-update
   - composer config discard-changes true
