--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
         "php": ">=7.1",
         "facebook/webdriver": "~1.3",
         "jeremeamia/superclosure": "^2.3",
-        "konsulting/project-root": "~1.0",
-        "laravel/dusk": "~4.0",
+        "konsulting/project-root": "^1.0",
+        "laravel/dusk": "^4.0.4",
         "orchestra/testbench": "~3.6.0"
     },
     "require-dev": {
         "laravel/laravel": "5.6.x-dev",
-        "mockery/mockery": "~1.0"
+        "mockery/mockery": "^1.0"
     },
     "extra": {
         "branch-alias": {
