--- a/composer.json
+++ b/composer.json
@@ -30,9 +30,9 @@
     "require": {
         "php": ">=7.1",
         "facebook/webdriver": "^1.3",
-        "jeremeamia/superclosure": "^2.3",
         "konsulting/project-root": "^1.0",
         "laravel/dusk": "^5.0",
+        "opis/closure": "^3.1",
         "orchestra/testbench": "~3.7.0"
     },
     "require-dev": {
