--- a/composer.json
+++ b/composer.json
@@ -28,20 +28,20 @@
         }
     },
     "require": {
-        "php": ">=7.1",
+        "php": ">=7.2",
         "facebook/webdriver": "^1.3",
         "konsulting/project-root": "^1.0",
-        "laravel/dusk": "^5.0",
+        "laravel/dusk": "^6.0",
         "opis/closure": "^3.1",
-        "orchestra/testbench": "~3.8.0"
+        "orchestra/testbench": "~3.9.0"
     },
     "require-dev": {
-        "laravel/laravel": "dev-master",
+        "laravel/laravel": "dev-develop",
         "mockery/mockery": "^1.0"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "3.8-dev"
+            "dev-master": "3.9-dev"
         }
     },
     "scripts": {
