--- a/composer.json
+++ b/composer.json
@@ -33,11 +33,11 @@
         "jeremeamia/superclosure": "^2.3",
         "konsulting/project-root": "~1.0",
         "laravel/dusk": "~2.0.11",
-        "orchestra/testbench": "~3.5.2"
+        "orchestra/testbench": "~3.5.5"
     },
     "require-dev": {
-        "mockery/mockery": "~1.0",
-        "phpunit/phpunit": "~6.0"
+        "laravel/laravel": "5.5.x-dev",
+        "mockery/mockery": "^1.0"
     },
     "suggest": {
         "orchestra/database": "Allow to use --realpath migration for testing (~3.4)."
