--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "jeremeamia/superclosure": "^2.3",
         "konsulting/project-root": "^1.0",
         "laravel/dusk": "^4.0.4",
+        "orchestra/dusk-updater": "^1.0",
         "orchestra/testbench": "~3.6.6"
     },
     "require-dev": {
