Add command to update dusk.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
         }
     },
     "scripts": {
+        "update-dusk": [
+            "@php vendor/bin/dusk-updater detect --auto-update"
+        ],
         "test": [
             "@php create-sqlite-db",
             "@php vendor/bin/phpunit -c ./ --color"
