Update laravel/laravel deps for 5.8
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "orchestra/testbench": "~3.8.1"
     },
     "require-dev": {
-        "laravel/laravel": "dev-master",
+        "laravel/laravel": "5.8.x-dev",
         "mockery/mockery": "^1.0"
     },
     "extra": {
