Update import order.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -51,6 +51,7 @@
         ],
         "test": [
             "@php create-sqlite-db",
+            "@composer run update-dusk",
             "@php vendor/bin/phpunit -c ./ --color"
         ]
     },
