--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,6 @@
 /.travis.yml export-ignore
 /phpunit.xml export-ignore
 /sync.sh export-ignore
-/CHANGELOG.md export-ignore
+/CHANGELOG-*.md export-ignore
 /LICENSE export-ignore
 /README.md export-ignore
