--- a/composer.json
+++ b/composer.json
@@ -34,11 +34,12 @@
         "laravel/dusk": "^5.6.3",
         "opis/closure": "^3.1",
         "orchestra/dusk-updater": "^1.1",
-        "orchestra/testbench": "^4.4.1"
+        "orchestra/testbench": "^4.5",
+        "phpunit/phpunit": "^8.3"
     },
     "require-dev": {
         "laravel/laravel": "dev-master",
-        "mockery/mockery": "^1.3"
+        "mockery/mockery": "^1.3.1"
     },
     "extra": {
         "branch-alias": {
