--- a/composer.json
+++ b/composer.json
@@ -34,8 +34,7 @@
         "laravel/dusk": "^5.6.3",
         "opis/closure": "^3.1",
         "orchestra/dusk-updater": "^1.1",
-        "orchestra/testbench": "^4.5",
-        "phpunit/phpunit": "^8.3"
+        "orchestra/testbench": "^4.5"
     },
     "require-dev": {
         "laravel/laravel": "dev-master",
