--- a/.gitattributes
+++ b/.gitattributes
@@ -13,5 +13,6 @@
 /phpunit.xml export-ignore
 /sync.sh export-ignore
 /CHANGELOG-*.md export-ignore
+/CONTRIBUTING.md export-ignore
 /LICENSE export-ignore
 /README.md export-ignore
