--- a/.gitattributes
+++ b/.gitattributes
@@ -13,6 +13,7 @@
 /phpunit.xml export-ignore
 /sync.sh export-ignore
 /CHANGELOG-*.md export-ignore
+/CONTRIBUTING.md export-ignore
 /CODE_OF_CONDUCT.md export-ignore
 /LICENSE export-ignore
 /README.md export-ignore
