--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 * text=auto
 
 # Ignore following folder/file.
+/.github export-ignore
 /build export-ignore
 /docs export-ignore
 /tests export-ignore
@@ -13,7 +14,7 @@
 /phpunit.xml export-ignore
 /sync.sh export-ignore
 /CHANGELOG-*.md export-ignore
-/CONTRIBUTING.md export-ignore
 /CODE_OF_CONDUCT.md export-ignore
+/CONTRIBUTING.md export-ignore
 /LICENSE export-ignore
 /README.md export-ignore
