--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_script:
 
 script:
   - if [[ $coverage = 'yes' ]]; then ./vendor/bin/phpunit -c ./ --coverage-clover build/logs/clover.xml; fi
-  - if [[ $coverage = 'no' ]]; then ./vendor/bin/phpunit -c ./ --testdox --verbose; fi
+  - if [[ $coverage = 'no' ]]; then ./vendor/bin/phpunit -c ./ --verbose; fi
 
 after_script:
   - if [[ $setup = 'coveralls' ]]; then php vendor/bin/php-coveralls -v; fi
