--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,12 @@
     },
     "require": {
         "php": ">=7.2",
-        "facebook/webdriver": "^1.3",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "^5.1",
+        "laravel/dusk": "^5.8.2",
         "opis/closure": "^3.1",
         "orchestra/dusk-updater": "^1.1",
-        "orchestra/testbench": "^3.9.2"
+        "orchestra/testbench": "^3.9.2",
+        "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
         "laravel/laravel": "dev-master",
