Add missing 7.4 lowest phpunit 9
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,8 @@ matrix:
       env: setup=stable phpunit=^9.0
     - php: 7.3
       env: setup=lowest phpunit=^9.0
+    - php: 7.4
+      env: setup=lowest phpunit=^9.0
     - php: 7.2
       env: setup=coveralls coverage=yes
   allow_failures:
