--- a/composer.json
+++ b/composer.json
@@ -29,9 +29,9 @@
     },
     "require": {
         "php": ">=7.1",
-        "facebook/webdriver": "^1.3",
+        "php-webdriver/webdriver": "^1.7",
         "konsulting/project-root": "^1.0",
-        "laravel/dusk": "^5.0",
+        "laravel/dusk": "^5.8.2",
         "opis/closure": "^3.1",
         "orchestra/dusk-updater": "^1.1",
         "orchestra/testbench": "~3.7.7"
