--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,12 @@
     },
     "require": {
         "php": ">=7.1",
-        "php-webdriver/webdriver": "^1.7",
         "konsulting/project-root": "^1.0",
         "laravel/dusk": "^5.8.2",
         "opis/closure": "^3.1",
         "orchestra/dusk-updater": "^1.1",
-        "orchestra/testbench": "~3.7.7"
+        "orchestra/testbench": "~3.7.7",
+        "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
         "laravel/laravel": "5.7.x-dev",
