--- a/composer.json
+++ b/composer.json
@@ -32,13 +32,12 @@
         "konsulting/project-root": "^1.1",
         "laravel/dusk": "^5.8.2",
         "opis/closure": "^3.1",
-        "orchestra/dusk-updater": "^1.1",
-        "orchestra/testbench": "^3.9.2",
+        "orchestra/dusk-updater": "^1.2.1",
+        "orchestra/testbench": "^3.9.3",
         "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
-        "laravel/laravel": "6.x-dev",
-        "mockery/mockery": "^1.0"
+        "laravel/laravel": "6.x-dev"
     },
     "extra": {
         "branch-alias": {
