--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [7.4, 7.3, 7.2]
+        php: [7.4, 7.3]
 
     name: PHP${{ matrix.php }} on ubuntu-latest
 
