--- a/composer.json
+++ b/composer.json
@@ -28,12 +28,12 @@
         }
     },
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.3",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "^5.8.2",
+        "laravel/dusk": "dev-master",
         "opis/closure": "^3.4.2",
         "orchestra/dusk-updater": "^1.2.1",
-        "orchestra/testbench": "^5.1.1",
+        "orchestra/testbench": "^6.0",
         "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
@@ -41,7 +41,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "5.1-dev"
+            "dev-master": "6.0-dev"
         }
     },
     "scripts": {
