--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
-        "laravel/laravel": "dev-master"
+        "laravel/laravel": "dev-develop"
     },
     "extra": {
         "branch-alias": {
