Add screenshots upload
When phpunit test fails, upload the screenshots to an artifact.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,3 +44,9 @@ jobs:
         run: vendor/laravel/dusk/bin/chromedriver-linux &
       - name: Execute tests
         run: vendor/bin/phpunit
+      - name: Upload Failed Screenshots
+        uses: actions/upload-artifact@v2-preview
+        if: failure()
+        with:
+          name: screenshots
+          path: tests/Browser/screenshots/*
