Support laravel/dusk 6 and testbench 5.2

--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,10 @@
     "require": {
         "php": ">=7.2",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "^5.8.2",
+        "laravel/dusk": "^5.8.2 || ^6.0",
         "opis/closure": "^3.4.2",
         "orchestra/dusk-updater": "^1.2.1",
-        "orchestra/testbench": "^5.1.1",
+        "orchestra/testbench": "^5.2",
         "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
