--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
-        "laravel/laravel": "dev-develop"
+        "laravel/laravel": "dev-develop",
+        "laravel/legacy-factories": "^1.0.4"
     },
     "extra": {
         "branch-alias": {
