--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": ">=7.3",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "dev-master",
+        "laravel/dusk": "^6.5",
         "opis/closure": "^3.4.2",
         "orchestra/dusk-updater": "^1.2.2",
         "orchestra/testbench": "^6.0",
