Upgrading to new factory.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
         "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
-        "laravel/laravel": "dev-develop",
-        "laravel/legacy-factories": "^1.0.4"
+        "laravel/laravel": "dev-develop"
     },
     "extra": {
         "branch-alias": {
