--- a/composer.json
+++ b/composer.json
@@ -36,9 +36,8 @@
         "laravel/dusk": "^6.5",
         "opis/closure": "^3.4.2",
         "orchestra/dusk-updater": "^1.2.2",
-        "orchestra/testbench": "^6.0",
-        "php-webdriver/webdriver": "^1.7",
-        "symfony/yaml": "^4.3 || ^5.0"
+        "orchestra/testbench": "^6.1",
+        "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
         "laravel/laravel": "dev-master"
