Allows laravel/dusk 6
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": ">=7.2",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "^5.8.2",
+        "laravel/dusk": "^5.8.2 || ^6.0",
         "opis/closure": "^3.4.2",
         "orchestra/dusk-updater": "^1.2.2",
         "orchestra/testbench": "^4.7",
