--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
         }
     },
     "require": {
-        "php": ">=7.2",
+        "php": ">=7.2 || ^8.0",
         "konsulting/project-root": "^1.1",
         "laravel/dusk": "^5.8.2 || ^6.0",
         "opis/closure": "^3.4.2",
