--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,12 +9,24 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    continue-on-error: ${{ matrix.experimental }}
     strategy:
-      fail-fast: false
       matrix:
-        php: [7.4, 7.3, 7.2]
+        os:
+          - "ubuntu-latest"
+          - "windows-latest"
+        php:
+          - "7.3"
+          - "7.4"
+          - "8.0"
+        dependencies:
+          - "locked"
+          - "lowest"
+          - "highest"
+        experimental:
+          - false
 
-    name: PHP${{ matrix.php }} on ubuntu-latest
+    name: PHP${{ matrix.php }} on ubuntu-latest (${{ matrix.dependencies }})
 
     steps:
       - name: Checkout code
@@ -24,45 +36,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.composer/cache/files
-          key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
-
-      - name: Setup PHP
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: ${{ matrix.php }}
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, sqlite3, pdo_sqlite, pdo_mysql, bcmath, soap, intl, gd, exif, iconv, imagick
-          coverage: none
-
-      - name: Install dependencies
-        run: |
-          composer update --prefer-dist --no-interaction --no-suggest
-      - name: Create database
-        run: php ./create-sqlite-db
-      - name: Upgrade Chrome Driver
-        run: vendor/bin/dusk-updater detect --auto-update
-      - name: Start Chrome Driver
-        run: vendor/laravel/dusk/bin/chromedriver-linux &
-      - name: Execute tests
-        run: vendor/bin/phpunit
-
-  php-8-tests:
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php: [8.0]
-
-    name: PHP${{ matrix.php }} on ubuntu-latest
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v1
-
-      - name: Cache dependencies
-        uses: actions/cache@v1
-        with:
-          path: ~/.composer/cache/files
-          key: dependencies-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
+          key: dependencies-${{ matrix.php }}-ubuntu-latest-${{ matrix.dependencies }}-composer-${{ hashFiles('composer.json') }}
 
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
@@ -72,8 +46,7 @@ jobs:
           coverage: none
 
       - name: Install dependencies
-        run: |
-          composer update --prefer-dist --no-interaction --no-suggest
+        uses: "ramsey/composer-install@v1"
       - name: Create database
         run: php ./create-sqlite-db
       - name: Upgrade Chrome Driver
