--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,19 +12,21 @@ jobs:
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       matrix:
-        os:
-          - "ubuntu-latest"
-          - "windows-latest"
         php:
+          - "7.2"
           - "7.3"
           - "7.4"
-          - "8.0"
         dependencies:
           - "locked"
           - "lowest"
           - "highest"
         experimental:
           - false
+      include:
+        - php: "8.0"
+          dependencies: "highest"
+          composer-options: "--ignore-platform-reqs"
+          experimental: true
 
     name: PHP${{ matrix.php }} on ubuntu-latest (${{ matrix.dependencies }})
 
