Fixes travis command.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ before_script:
   - chmod +x php-coveralls.phar
 
 script:
-  - ./vendor/bin/phpunit -c phpunit.xml --coverage-clover build/logs/clover.xml
+  - ./vendor/bin/phpunit -c phpunit.xml.dist --coverage-clover build/logs/clover.xml
 
 after_script:
   - php-coveralls.phar -v
