Update composer scripts.
Signed-off-by: Mior Muhammad Zaki <crynobone@gmail.com>

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,7 @@
         }
     },
     "scripts": {
-        "update-dusk": [
+        "dusk:prepare": [
             "@php vendor/bin/dusk-updater detect --auto-update"
         ],
         "test": [
