--- a/composer.json
+++ b/composer.json
@@ -45,12 +45,12 @@
         }
     },
     "scripts": {
-        "dusk:prepare": [
+        "prepare": [
             "@php vendor/bin/dusk-updater detect --auto-update"
         ],
         "test": [
             "@php create-sqlite-db",
-            "@composer run update-dusk",
+            "@composer run prepare",
             "@php vendor/bin/phpunit -c ./ --color"
         ]
     },
