--- a/composer.json
+++ b/composer.json
@@ -37,8 +37,7 @@
         "opis/closure": "^3.4.2",
         "orchestra/dusk-updater": "^1.3",
         "orchestra/testbench": "^7.0",
-        "php-webdriver/webdriver": "^1.7",
-        "symfony/yaml": "^5.2"
+        "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
         "laravel/laravel": "dev-master"
