--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
         "laravel/dusk": "^6.11.3",
         "opis/closure": "^3.4.2",
         "orchestra/dusk-updater": "^1.3.1",
-        "orchestra/testbench": "^6.11",
+        "orchestra/testbench": "dev-phpunit10",
         "php-webdriver/webdriver": "^1.7"
     },
     "require-dev": {
