--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -38,6 +38,12 @@ jobs:
           dependency-versions: "${{ matrix.dependencies }}"
           composer-options: "--prefer-dist"
 
+      - name: Create database
+        run: php ./create-sqlite-db
+      - name: Upgrade Chrome Driver
+        run: vendor/bin/dusk-updater detect --auto-update
+      - name: Start Chrome Driver
+        run: vendor/laravel/dusk/bin/chromedriver-linux &
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
 
