--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
         "konsulting/project-root": "^1.1",
         "laravel/dusk": "^6.14",
         "opis/closure": "^3.4.2",
-        "orchestra/dusk-updater": "^1.4.3",
+        "orchestra/dusk-updater": "^1.4.3 || ^2.0",
         "orchestra/testbench": "^6.19",
         "php-webdriver/webdriver": "^1.7"
     },
