--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
         "konsulting/project-root": "^1.1",
         "laravel/dusk": "^6.18.1",
         "opis/closure": "^3.4.2",
+        "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^1.4.3 || ^2.0",
         "orchestra/testbench": "^6.21.1",
         "php-webdriver/webdriver": "^1.7"
