--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "dev-laravel9 || dev-develop",
+        "laravel/dusk": "^6.21",
         "opis/closure": "^3.6",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^1.5 || ^2.0",
