--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -22,6 +22,7 @@ jobs:
         dependencies:
           - "locked"
           - "highest"
+          - "lowest"
         experimental:
           - false
 
@@ -79,6 +80,7 @@ jobs:
         dependencies:
           - "locked"
           - "highest"
+          - "lowest"
         experimental:
           - false
 
