--- a/.github/workflows/coveralls.yml
+++ b/.github/workflows/coveralls.yml
@@ -15,7 +15,7 @@ jobs:
         php:
           - "7.3"
         dependencies:
-          - "locked"
+          - "highest"
         experimental:
           - false
 
