--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,7 @@ jobs:
           - "8.0"
           - "8.1"
         phpunit:
-          - "^9.5.10"
+          - "9.x"
         dependencies:
           - "highest"
           - "lowest"
@@ -47,6 +47,16 @@ jobs:
         with:
           dependency-versions: "${{ matrix.dependencies }}"
           composer-options: "--prefer-dist --no-cache"
+
+      - name: Installed dependencies
+        run: |
+          composer show -D
+
+      - name: Audit dependencies
+        continue-on-error: true
+        run: |
+          composer audit
+
       - name: Create database
         run: php ./create-sqlite-db
       - name: Upgrade Chrome Driver
