--- a/composer.json
+++ b/composer.json
@@ -53,17 +53,15 @@
         }
     },
     "scripts": {
-        "prepare": [
-            "@composer run post-autoload-dump",
+        "post-autoload-dump": [
+            "@php testbench-dusk package:discover --ansi",
             "@php vendor/bin/dusk-updater detect --auto-update"
         ],
+        "prepare": "@composer run post-autoload-dump",
         "test": [
             "@php create-sqlite-db",
             "@composer run prepare",
             "@php vendor/bin/phpunit -c ./ --color"
-        ],
-        "post-autoload-dump": [
-            "@php testbench-dusk package:discover --ansi"
         ]
     },
     "config": {
