--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,8 @@
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
 /canvas.yaml export-ignore
+/phpstan-baseline.neon export-ignore
+/phpstan.neon.dist export-ignore
 /phpunit.xml export-ignore
 /sync.sh export-ignore
 /CHANGELOG-*.md export-ignore
