--- a/phpstan-baseline.neon
+++ b/phpstan-baseline.neon
@@ -1,6 +1,2 @@
 parameters:
-	ignoreErrors:
-		-
-			message: "#^Negated boolean expression is always false\\.$#"
-			count: 1
-			path: src/TestCase.php
+	ignoreErrors: []
