--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=AckfSECXIvnK5r28GVIWUAxmbBSjTsmF
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,11 +9,6 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
