--- a/composer.json
+++ b/composer.json
@@ -54,13 +54,14 @@
         }
     },
     "scripts": {
-        "post-autoload-dump": [
+        "post-autoload-dump": "@composer run prepare",
+        "prepare": [
+            "@php testbench-dusk package:create-sqlite-db --ansi",
             "@php testbench-dusk package:discover --ansi",
             "@php vendor/bin/dusk-updater detect --auto-update"
         ],
-        "prepare": "@composer run post-autoload-dump",
         "test": [
-            "@php create-sqlite-db",
+            "@php testbench-dusk package:create-sqlite-db --force --ansi",
             "@php vendor/bin/phpunit -c ./ --color"
         ]
     },
