--- a/composer.json
+++ b/composer.json
@@ -56,12 +56,13 @@
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
         "prepare": [
-            "@php testbench-dusk package:create-sqlite-db --ansi",
+            "@php create-sqlite-db",
             "@php testbench-dusk package:discover --ansi",
             "@php vendor/bin/dusk-updater detect --auto-update"
         ],
         "test": [
-            "@php testbench-dusk package:create-sqlite-db --force --ansi",
+            "@php drop-sqlite-db",
+            "@php create-sqlite-db",
             "@php vendor/bin/phpunit -c ./ --color"
         ]
     },
