--- a/composer.json
+++ b/composer.json
@@ -60,6 +60,12 @@
             "@php testbench-dusk package:discover --ansi",
             "@php vendor/bin/dusk-updater detect --auto-update"
         ],
+        "ci": [
+            "@composer run prepare",
+            "php vendor/bin/phpstan analyse",
+            "php vendor/bin/pint",
+            "@composer run test"
+        ],
         "test": [
             "@php drop-sqlite-db",
             "@php create-sqlite-db",
