--- a/composer.json
+++ b/composer.json
@@ -61,8 +61,8 @@
         ],
         "ci": [
             "@composer run prepare",
-            "php vendor/bin/phpstan analyse",
-            "php vendor/bin/pint",
+            "@php vendor/bin/phpstan analyse",
+            "@php vendor/bin/pint",
             "@composer run test"
         ],
         "test": [
