--- a/.gitattributes
+++ b/.gitattributes
@@ -8,13 +8,11 @@
 /.coveralls.yml export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/.php_cs export-ignore
-/.scrutinizer.yml export-ignore
-/.travis.yml export-ignore
 /canvas.yaml export-ignore
 /phpstan-baseline.neon export-ignore
 /phpstan.neon.dist export-ignore
 /phpunit.xml export-ignore
+/pint.json export-ignore
 /sync.sh export-ignore
 /CHANGELOG-*.md export-ignore
 /CODE_OF_CONDUCT.md export-ignore
