--- a/.github/workflows/deprecations.yaml
+++ b/.github/workflows/deprecations.yaml
@@ -25,6 +25,9 @@ jobs:
         experimental:
           - false
 
+    name: PHP${{ matrix.php }} with PHPUnit${{ matrix.phpunit }} (${{ matrix.dependencies }})
+
+    steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
