--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -40,10 +40,14 @@ jobs:
 
       - name: Create database
         run: php ./create-sqlite-db
+
       - name: Start Chrome Driver
         run: vendor/laravel/dusk/bin/chromedriver-linux &
+
       - name: Execute tests
         run: vendor/bin/phpunit --coverage-clover build/logs/clover.xml
+        env:
+          TESTBENCH_CONVERT_DEPRECATIONS_TO_EXCEPTIONS: false
 
       - name: Upload coverage results to Coveralls
         env:
