--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "require": {
         "php": "^8.0",
         "konsulting/project-root": "^1.1",
-        "laravel/dusk": "^6.25.1 || ^7.2.1",
+        "laravel/dusk": "^7.2.1",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^1.5 || ^2.0",
         "orchestra/testbench": "^7.18",
