--- a/composer.json
+++ b/composer.json
@@ -34,19 +34,19 @@
         "testbench-dusk"
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^8.1",
         "konsulting/project-root": "^1.1",
         "laravel/dusk": "^7.3",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^1.5 || ^2.0",
-        "orchestra/testbench": "^7.19",
+        "orchestra/testbench": "^8.0",
         "php-webdriver/webdriver": "^1.9"
     },
     "require-dev": {
-        "laravel/laravel": "9.x-dev",
+        "laravel/laravel": "dev-master",
         "laravel/pint": "^1.1",
-        "orchestra/canvas": "^7.0",
-        "phpstan/phpstan": "^1.8"
+        "orchestra/canvas": "^8.0",
+        "phpstan/phpstan": "^1.9.7"
     },
     "extra": {
         "branch-alias": {
