--- a/composer.json
+++ b/composer.json
@@ -35,10 +35,11 @@
     ],
     "require": {
         "php": "^8.1",
+        "composer-runtime-api": "^2.2",
         "konsulting/project-root": "^1.1",
         "laravel/dusk": "^7.6",
         "laravel/serializable-closure": "^1.0",
-        "orchestra/dusk-updater": "^1.5 || ^2.0",
+        "orchestra/dusk-updater": "^2.0",
         "orchestra/testbench": "^8.0",
         "php-webdriver/webdriver": "^1.9"
     },
