--- a/.github/workflows/coveralls.yaml
+++ b/.github/workflows/coveralls.yaml
@@ -39,7 +39,7 @@ jobs:
           composer-options: "--prefer-dist"
 
       - name: Create database
-        run: php ./create-sqlite-db
+        run: php ./testbench-dusk package:create-sqlite-db
 
       - name: Start Chrome Driver
         run: vendor/laravel/dusk/bin/chromedriver-linux &
