--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -59,7 +59,7 @@ jobs:
         run: vendor/laravel/dusk/bin/chromedriver-linux &
 
       - name: Execute tests
-        run: vendor/bin/phpunit -c phpunit9.xml
+        run: vendor/bin/phpunit
 
       - name: Upload Failed Screenshots
         uses: actions/upload-artifact@v3
