--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
         "laravel/pint": "^1.6",
         "orchestra/canvas": "^8.1",
         "phpstan/phpstan": "^1.10.7",
-        "phpunit/phpunit": "^9.6 || ~10.0.7"
+        "phpunit/phpunit": "^10.1"
     },
     "scripts": {
         "post-autoload-dump": "@composer run prepare",
