--- a/composer.json
+++ b/composer.json
@@ -52,14 +52,19 @@
         }
     },
     "scripts": {
-        "prepare": "@composer run post-autoload-dump",
+        "post-autoload-dump": [
+            "@prepare",
+            "@dusk:install-chromedriver"
+        ],
+        "prepare": "@php testbench-dusk package:discover --ansi",
+        "dusk:install-chromedriver": "@php vendor/bin/dusk-updater detect --auto-update --ansi",
         "test": [
             "@php create-sqlite-db",
             "@php vendor/bin/phpunit -c ./ --color"
         ],
-        "post-autoload-dump": [
-            "@php testbench-dusk package:discover --ansi",
-            "@php vendor/bin/dusk-updater detect --auto-update"
+        "ci": [
+            "@dusk:install-chromedriver",
+            "@test"
         ]
     },
     "config": {
