--- a/testbench.yaml
+++ b/testbench.yaml
@@ -1,5 +1,12 @@
+providers:
+  - Workbench\App\Providers\RouteServiceProvider
+
+migrations:
+  - workbench/database/migrations
+
 workbench:
   start: '/'
   build:
     - drop-sqlite-db
     - create-sqlite-db
+    - migrate:refresh
