--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
         "opis/closure": "^3.6",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^1.7.1 || ^2.2.1",
-        "orchestra/testbench": "^6.34",
+        "orchestra/testbench": "^6.35",
         "php-webdriver/webdriver": "^1.9"
     },
     "require-dev": {
@@ -59,6 +59,7 @@
         "prepare": "@php testbench-dusk package:discover --ansi",
         "dusk:install-chromedriver": "@php vendor/bin/dusk-updater detect --auto-update --ansi",
         "test": [
+            "@php drop-sqlite-db",
             "@php create-sqlite-db",
             "@php vendor/bin/phpunit -c ./ --color"
         ],
