--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,7 @@
         "laravel/dusk": "^7.11",
         "laravel/serializable-closure": "^1.0",
         "orchestra/dusk-updater": "^2.3",
-        "orchestra/testbench": "^8.12",
+        "orchestra/testbench": "8.x-dev",
         "php-webdriver/webdriver": "^1.9"
     },
     "require-dev": {
