--- a/.gitattributes
+++ b/.gitattributes
@@ -2,13 +2,14 @@
 
 # Ignore following folder/file.
 /.github export-ignore
-/build export-ignore
+/bin export-ignore
 /docs export-ignore
 /tests export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/phpunit.xml export-ignore
-/sync.sh export-ignore
+/phpunit.xml.dist export-ignore
+/pint.json export-ignore
+/testbench.yaml export-ignore
 /CHANGELOG-*.md export-ignore
 /CODE_OF_CONDUCT.md export-ignore
 /CONTRIBUTING.md export-ignore
