--- a/testbench.yaml
+++ b/testbench.yaml
@@ -1,5 +1,6 @@
 providers:
   - Workbench\App\Providers\RouteServiceProvider
+  - Laravel\Dusk\DuskServiceProvider
 
 migrations:
   - workbench/database/migrations
