--- a/composer.json
+++ b/composer.json
@@ -70,5 +70,6 @@
     "config": {
         "sort-packages": true
     },
-    "minimum-stability": "stable"
+    "prefer-stable": true,
+    "minimum-stability": "dev"
 }
