--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -113,8 +113,9 @@ jobs:
       - name: Installed dependencies
         run: |
           composer show -D
+
       - name: Create database
-        run: php ./create-sqlite-db
+        run: php testbench-dusk package:create-sqlite-db
 
       - name: Start Chrome Driver
         run: vendor/laravel/dusk/bin/chromedriver-linux &
